[build-system]
requires = [
  "pip >= 19.3.1",
  "setuptools >= 42",
  "setuptools_scm[toml] >= 3.5.0",
  "setuptools_scm_git_archive >= 1.1",
  "wheel >= 0.33.6",
]
build-backend = "setuptools.build_meta"

[tool.black]
skip-string-normalization = false

[tool.isort]
profile = "black"
known_first_party = "molecule"

[tool.pytest.ini_options]
markers = [
    "serial: Run this test serially via filelock.",
    "extensive"
]
norecursedirs = [
  "build",
  "src/molecule/cookiecutter/scenario/verifier/testinfra/{{cookiecutter.molecule_directory}}",
  "src/molecule/test/scenarios"
]

[tool.setuptools_scm]
local_scheme = "no-local-version"
